responsive iframe video but gap issue on desktop

--- a/styles/main.css
+++ b/styles/main.css
@@ -51,16 +51,16 @@ ol
     font-size: 69px;
 }
 .mobile-yt {
-	position:relative;
-	padding-bottom:56.25%;
-	padding-top:30px;
-	height:0;
-	overflow:hidden;
+    align-content: center;
+    position: relative; 
+    padding-bottom: 56.25%; 
+    height: 0; overflow: hidden; 
+    max-width: 100%; height: auto;
 }
-.mobile-yt iframe, .video-container object, .video-container embed {
-	position:absolute;
-	top:0;
-	left:0;
-	width:100%;
-	height:100%;
+.mobile-yt iframe, .mobile-yt object, .mobile-yt embed {
+    align-self: center;
+    position: absolute; 
+    top: 0; left: 0; 
+    width: 50%; 
+    height: 50%;
 }
